<resources>
    <string name="app_name">atracker</string>
    <string name="app_name_korean">어트래커</string>
    <string name="title_home">홈</string>
    <string name="title_blog">블로그</string>
    <string name="title_search">탐색</string>

    <string name="title_home_detail">홈 세부사항</string>
    <string name="title_notification">알림</string>
    <string name="title_calendar">일정</string>
    <string name="title_home_add">지원 현황 추가</string>
    <string name="title_home_write">홈 세부사항 작성</string>
    <string name="login_google">Google로 시작하기</string>
    <string name="님의">님의</string>
    <string name="지원현황입니다">지원현황입니다!</string>
    <string name="title_my_page">내 페이지</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">로그아웃</string>
    <string name="pass_rate">합격률</string>
    <string name="progress">Progress</string>
    <string name="nickname_edit">닉네임 수정</string>
    <string name="mytitle_edit">내 직무 수정</string>
    <string name="progress_select">단계 선택</string>
    <string name="type_select">타입</string>
    <string name="please_write_question">질문을 작성하세요</string>
    <string name="please_write_answer">대답을 작성하세요</string>
    <string name="please_write_review">후기 및 반성</string>
    <string name="scroll_top">맨 위로 ⌃</string>


    <!--    -->
    <string name="example_3_input_dialog_title">Enter calendarEvent title</string>
    <string name="example_3_empty_input_text">Text is empty</string>
    <string name="example_3_dialog_delete_confirmation">Delete this calendarEvent?</string>
    <string name="delete">삭제</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="save_korean">저장</string>
    <string name="home_display_please_write">아직 등록된 지원현황이 없어요!\n + 버튼을 눌러 추가해주세요</string>
    <string name="review_title_hint">내용을 입력해주세요.</string>
    <string name="review_title">종합 후기</string>
    <string name="q">Q.</string>
    <string name="question_hint">질문을 입력하세요.</string>
    <string name="a">A.</string>
    <string name="answer_hint">답변을 입력하세요.</string>
    <string name="review_and_reflect_hint">후기를 입력하세요.</string>


    <string name="plus_free"><font color="#7EFCDD">+ </font> <font color="#F5F5F5">자유 양식</font></string>
    <string name="plus_qna"><font color="#7EFCDD">+ </font> <font color="#F5F5F5">Q&amp;A 양식</font></string>
    <string name="plus_review"><font color="#7EFCDD">+ </font> <font color="#F5F5F5">종합 후기</font></string>


    <string name="percent">%</string>
    <string name="waiting">대기중</string>
    <string name="not_passing">불합격</string>
    <string name="passing">합격</string>
    <string name="edit">편집</string>
    <string name="edit_complete">편집 완료</string>
    <string name="home_add_title">지원 현황 추가</string>
    <string name="total_progress">지원 단계를 순서대로 눌러주세요.</string>
    <string name="date_title">일정</string>
    <string name="location_title">장소</string>
    <string name="location_hint">장소나 화상면접 추가하기</string>
    <string name="note_title">노트</string>
    <string name="note_hint">노트 추가하기</string>

    <!--    <string name="chip_title_1">서류</string>-->
    <!--    <string name="chip_title_2">사전 과제</string>-->
    <!--    <string name="chip_title_3">1차 면접</string>-->
    <!--    <string name="chip_title_4">2차 면접</string>-->
    <!--    <string name="chip_title_5">3차 면접</string>-->
    <!--    <string name="chip_title_6">인적성</string>-->
    <!--    <string name="chip_title_7">과제</string>-->
    <!--    <string name="chip_title_8">코딩 테스트</string>-->
    <!--    <string name="chip_title_9">AI 면접</string>-->
    <!--    <string name="chip_title_10">최종 면접</string>-->

    <string name="chip_title_1">서류</string>
    <string name="chip_title_2">사전 과제</string>
    <string name="chip_title_3">포트폴리오</string>
    <string name="chip_title_4">1차 면접</string>
    <string name="chip_title_5">2차 면접</string>
    <string name="chip_title_6">인성 검사</string>
    <string name="chip_title_7">적성 검사</string>
    <string name="chip_title_8">코딩 테스트</string>

    <string name="company_name_title">회사명</string>
    <string name="apply_field_title">포지션</string>
    <string name="position_title">포지션</string>
    <string name="work_type_name_title">근무 형태</string>
    <string name="cancel_title">취소</string>
    <string name="save_title">저장</string>
    <string name="time_title">시간</string>

    <string name="alert_type_1_text_1_message"><font color="#7EFCDD">개의 후기</font><font color="#F5F5F5">를 정말 삭제하시겠습니까?</font></string>
    <string name="add_company_hint">회사명을 입력해주세요.</string>
    <string name="add_apply_hint">포지션명을 입력해주세요.</string>
    <string name="login_text_1">취업 프로세스를 기록을</string>
    <string name="login_text_2">더 쉽고, 가치있게</string>
    <string name="my_page_title">마이페이지</string>
    <string name="my_page_hello_title">님, 안녕하세요!</string>
    <string name="career_age_title">경력</string>
    <string name="account_setting_title">계정 설정</string>
    <string name="account_withdrawal_title">계정 탈퇴</string>
    <string name="help_title">도움</string>
    <string name="contact_title">연락하기</string>
    <string name="next_title">다음</string>
    <string name="finish_title">완료</string>
    <string name="nickname_suggest_title">개성있는 닉네임을 설정해주세요.</string>
    <string name="position_suggest_title">어떤 포지션으로 취업하고 싶으신가요?</string>
    <string name="name_title">이름</string>
    <string name="nickname_title">닉네임</string>
    <string name="sign_up_complete_title">로그인 완료!</string>
    <string name="sign_up_complete_welcome">반갑습니다!</string>
    <string name="free_hint_title">내용을 입력하세요.</string>
    <string name="free_title">제목</string>
    <string name="free_title_ori">자유 양식 제목</string>
    <string name="brianrudder_email">brianrudder@naver.com</string>
    <string name="review_edit_title">지원 후기 수정하기</string>
    <string name="progress_edit_title">전형 편집하기</string>
    <string name="review_delete_title">지원 후기 삭제하기</string>
    <string name="free_type_title">자유 양식 제목</string>
    <string name="complete_title">완료</string>
    <string name="my_title">마이</string>
    <string name="confirm_title">확인</string>
    <string name="service_term_confirm_title">서비스 이용 동의</string>
    <string name="terms_total_confirm_title">약관 전체동의</string>
    <string name="terms_service_confirm_title">(필수) 서비스 이용약관</string>
    <string name="terms_service_confirm_title_ori">서비스 이용약관</string>
    <string name="terms_privacy_title">(필수) 개인정보 처리방침</string>
    <string name="terms_privacy_title_ori">개인정보 처리방침</string>
    <string name="terms_marketing_title">(선택) 마케팅 정보 수신 동의</string>
    <string name="sla_title">님,</string>
    <string name="company_search_append_title">+ 직접 추가</string>
    <string name="selection_title">선택</string>


<!--    <string name="api_key">AIzaSyANv1VolWvrIHSwUnERlrqXLwjvdNpF8pI</string>-->
<!--    <string name="client_id">937085987148-hg9583kh92l47rjlia9vng2v5eg7b54b.apps.googleusercontent.com</string>-->

    <string name="portfolio_1_title">서류전형</string>
    <string name="portfolio_2_title">면접전형</string>
    <string name="portfolio_3_title">최종전형</string>


</resources>