<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_blog"
        android:name="com.example.atracker.ui.blog.BlogDisplayFragment"
        android:label="@string/title_blog"
        tools:layout="@layout/fragment_blog_display" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.atracker.ui.home.HomeDisplayFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home_display">


        <action
            android:id="@+id/action_navigation_community_to_navigation_notification_display"
            app:destination="@id/navigation_notification_display"
            app:popUpTo="@id/navigation_home" />

        <action
            android:id="@+id/action_navigation_community_to_navigation_my_page_display"
            app:destination="@id/navigation_my_page_display"
            app:popUpTo="@id/navigation_home" />


        <action
            android:id="@+id/action_navigation_community_to_navigation_home_detail"
            app:destination="@id/navigation_home_detail"
            app:popUpTo="@id/navigation_home" />



        <action
            android:id="@+id/action_navigation_community_to_navigation_home_add"
            app:destination="@id/navigation_home_add"
            app:popUpTo="@id/navigation_home" />



<!--        <action-->
<!--            android:id="@+id/action_navigation_home_to_navigation_calendar"-->
<!--            app:destination="@id/navigation_calendar" />-->


    </fragment>




    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.example.atracker.ui.calendar.CalendarDisplayFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar_display" />


    <fragment
        android:id="@+id/navigation_notification_display"
        android:name="com.example.atracker.ui.NotificationDisplayFragment"
        android:label="@string/title_notification"
        tools:layout="@layout/fragment_notification_display">
    </fragment>


    <fragment
        android:id="@+id/navigation_my_page_display"
        android:name="com.example.atracker.ui.MyPageDisplayFragment"
        android:label="@string/title_my_page"
        tools:layout="@layout/fragment_my_page_display">
    </fragment>


    <fragment
        android:id="@+id/navigation_home_detail"
        android:name="com.example.atracker.ui.home.HomeDetailFragment"
        android:label="@string/title_home_detail"
        tools:layout="@layout/fragment_home_detail">
    </fragment>


<!--    지원 현황 추가-->
    <fragment
        android:id="@+id/navigation_home_add"
        android:name="com.example.atracker.ui.home.HomeAddFragment"
        android:label="@string/title_home_add"
        tools:layout="@layout/fragment_home_add">
    </fragment>



</navigation>
