<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_main_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_blog"
        android:name="com.example.atracker.ui.blog.BlogDisplayFragment"
        android:label="@string/title_blog"
        tools:layout="@layout/fragment_blog_display" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.atracker.ui.home.HomeDisplayFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home_display">


        <action
            android:id="@+id/action_navigation_home_to_navigation_notification_display"
            app:destination="@id/navigation_notification_display"
            app:popUpTo="@id/navigation_home" />

        <action
            android:id="@+id/action_navigation_home_to_navigation_my_page_display"
            app:destination="@id/navigation_my_page_display"
            app:popUpTo="@id/navigation_home" />


        <action
            android:id="@+id/action_navigation_home_to_navigation_home_detail"
            app:destination="@id/navigation_home_detail"
            app:popUpTo="@id/navigation_home" >

            <argument
                android:name="progressIndex"
                app:argType="integer"
                android:defaultValue="0"
                />

        </action>



        <action
            android:id="@+id/action_navigation_home_to_navigation_home_add"
            app:destination="@id/navigation_home_add"
            app:popUpTo="@id/navigation_home" />



<!--        <action-->
<!--            android:id="@+id/action_navigation_home_to_navigation_calendar"-->
<!--            app:destination="@id/navigation_calendar" />-->


    </fragment>




    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.example.atracker.ui.calendar.CalendarDisplayFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar_display" />


    <fragment
        android:id="@+id/navigation_notification_display"
        android:name="com.example.atracker.ui.NotificationDisplayFragment"
        android:label="@string/title_notification"
        tools:layout="@layout/fragment_notification_display">
    </fragment>


    <fragment
        android:id="@+id/navigation_my_page_display"
        android:name="com.example.atracker.ui.MyPageDisplayFragment"
        android:label="@string/title_my_page"
        tools:layout="@layout/fragment_my_page_display">
    </fragment>


    <fragment
        android:id="@+id/navigation_home_detail"
        android:name="com.example.atracker.ui.home.HomeDetailFragment"
        android:label="@string/title_home_detail"
        tools:layout="@layout/fragment_home_detail">

        <action
            android:id="@+id/action_navigation_home_detail_to_navigation_home_write"
            app:destination="@id/navigation_home_write"
            app:popUpTo="@id/navigation_home_detail" >
            <argument
                android:name="progressIndex"
                app:argType="integer"
                android:defaultValue="0"
                />


        </action>


        <action
            android:id="@+id/action_navigation_home_detail_to_navigation_home_add"
            app:destination="@id/navigation_home_add"
            app:popUpTo="@id/navigation_home_detail" >
            <argument
                android:name="progressIndex"
                app:argType="integer"
                android:defaultValue="0"
                />


        </action>




        <argument
            android:name="progressIndex"
            app:argType="integer"
            android:defaultValue="0"
            />


    </fragment>


<!--    지원 현황 추가-->
    <fragment
        android:id="@+id/navigation_home_add"
        android:name="com.example.atracker.ui.home.HomeAddFragment"
        android:label="@string/title_home_add"
        tools:layout="@layout/fragment_home_add">

        <action
            android:id="@+id/action_navigation_home_add_to_navigation_home_add_calendar"
            app:destination="@id/navigation_home_add_calendar"
            app:popUpTo="@id/navigation_home_add" />


    </fragment>


    <fragment
        android:id="@+id/navigation_home_write"
        android:name="com.example.atracker.ui.home.HomeWriteFragment"
        android:label="@string/title_home_write"
        tools:layout="@layout/fragment_home_write">

        <argument
            android:name="progressIndex"
            app:argType="integer"
            android:defaultValue="0"
            />


    </fragment>


    <fragment
        android:id="@+id/navigation_home_add_calendar"
        android:name="com.example.atracker.ui.home.HomeAddCalendarFragment"
        tools:layout="@layout/fragment_home_add_calendar">
    </fragment>


    <fragment
        android:id="@+id/navigation_home_bottom_sheet"
        android:name="com.example.atracker.ui.home.HomeBottomSheetFragment"
        tools:layout="@layout/fragment_home_bottom_sheet">


        <action
            android:id="@+id/action_navigation_home_bottom_sheet_to_navigation_home_write"
            app:destination="@id/navigation_home_write"
            app:popUpTo="@id/navigation_home_bottom_sheet" >
            <argument
                android:name="progressIndex"
                app:argType="integer"
                android:defaultValue="0"
                />
        </action>

    </fragment>



</navigation>
