<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@color/teal_200"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/homeWriteQuestionTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/please_write_question"
        android:background="@drawable/edge_grey_home_write"
        >
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:id="@+id/homeWriteAnswerTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeWriteQuestionTV"
        android:hint="@string/please_write_answer"
        android:background="@drawable/edge_grey_home_write"
        >
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:id="@+id/homeWriteReviewTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeWriteAnswerTV"
        android:hint="@string/please_write_review"
        android:background="@drawable/edge_grey_home_write"
        >
    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>