<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/CalendarBottomWholeCL"
        >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:id="@+id/CalendarBottomMainCL"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/delete"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_marginStart="10dp"
                android:id="@+id/calendarBottomDeleteTV"
                >
            </TextView>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/edit"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_marginEnd="10dp"
                android:id="@+id/calendarBottomEditTV"
                >
            </TextView>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/save_korean"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_marginEnd="10dp"
                android:id="@+id/calendarBottomSaveTV"
                android:visibility="invisible"
                >
            </TextView>


            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:textColor="@color/teal_700"
                android:id="@+id/calendarBottomEventTitleET"
                android:background="@null"
                android:focusableInTouchMode="false"
                >

            </EditText>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@+id/calendarBottomEventTitleET"
                android:background="@color/atracker_gray_3"
                android:id="@+id/calendarBottomView1"
                android:layout_marginTop="10dp"
                >
            </View>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/calendarBottomView1"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:textColor="@color/teal_700"
                android:id="@+id/calendarBottomDateTV"
                android:text="@string/date_title"
                android:layout_marginStart="20dp"
                >

            </TextView>

            <DatePicker
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:id="@+id/calendarBottomDatePicker"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:theme="@style/MyDatePicker"
                app:layout_constraintTop_toBottomOf="@+id/calendarBottomView1"
                app:layout_constraintStart_toEndOf="@+id/calendarBottomDateTV"
                app:layout_constraintEnd_toEndOf="parent"
                >

            </DatePicker>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@+id/calendarBottomDateTV"
                android:background="@color/atracker_gray_3"
                android:id="@+id/calendarBottomView2"
                android:layout_marginTop="60dp"
                >
            </View>




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/calendarBottomView2"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:textColor="@color/teal_700"
                android:id="@+id/calendarBottomTimeTV"
                android:text="@string/time_title"
                android:layout_marginStart="20dp"
                >

            </TextView>

            <TimePicker
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:id="@+id/calendarBottomTimePicker"
                android:datePickerMode="spinner"
                android:timePickerMode="spinner"
                android:theme="@style/MyDatePicker"
                app:layout_constraintTop_toBottomOf="@+id/calendarBottomView2"
                app:layout_constraintStart_toEndOf="@+id/calendarBottomTimeTV"
                app:layout_constraintEnd_toEndOf="parent"
                >

            </TimePicker>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@+id/calendarBottomTimeTV"
                android:background="@color/atracker_gray_3"
                android:id="@+id/calendarBottomView3"
                android:layout_marginTop="60dp"
                >
            </View>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/calendarBottomView3"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:textColor="@color/teal_700"
                android:id="@+id/calendarBottomLocationTV"
                android:text="@string/location_title"
                android:layout_marginStart="20dp"
                >

            </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/calendarBottomView3"
                app:layout_constraintStart_toEndOf="@+id/calendarBottomLocationTV"
                android:layout_marginTop="20dp"
                android:layout_marginStart="70dp"
                android:hint="@string/location_hint"
                android:id="@+id/calendarBottomLocationET"
                android:paddingEnd="10dp"
                android:background="@null"
                android:layout_marginEnd="10dp"
                android:focusableInTouchMode="false"
                >

            </EditText>



            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@+id/calendarBottomLocationTV"
                android:background="@color/atracker_gray_3"
                android:id="@+id/calendarBottomView4"
                android:layout_marginTop="20dp"
                >
            </View>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/calendarBottomView4"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:textColor="@color/teal_700"
                android:id="@+id/calendarBottomNoteTV"
                android:text="@string/note_title"
               android:layout_marginStart="20dp"
                >

            </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/calendarBottomView4"
                app:layout_constraintStart_toEndOf="@+id/calendarBottomLocationTV"
                android:layout_marginTop="20dp"
                android:layout_marginStart="70dp"
                android:hint="@string/note_hint"
                android:id="@+id/calendarBottomNoteET"
                android:background="@null"
                android:paddingEnd="10dp"
                android:layout_marginEnd="10dp"
                android:focusableInTouchMode="false"
                >

            </EditText>







        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
