<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeDisplayFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/homeAddHeadCL"
            android:background="@color/atracker_header_transparent"
            >

            <ImageView
                android:layout_width="24dp"
                android:layout_height="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/ic_back_icon_raw"
                android:id="@+id/homeAddBackButton"
                android:layout_marginStart="20dp"
                app:layout_constraintBottom_toBottomOf="parent"

                >
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/homeAddCompanyTitle"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/home_add_title"
                android:textSize="16sp"
                android:textColor="@color/atracker_white"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/save_korean"
                android:layout_marginEnd="16dp"
                android:id="@+id/homeAddSaveTV"
                android:textSize="16sp"
                android:textColor="@color/atracker_white"
                app:layout_constraintBottom_toBottomOf="parent"
                >
            </TextView>


        </androidx.constraintlayout.widget.ConstraintLayout>

        

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/homeAddHeadCL"
            app:layout_constraintBottom_toBottomOf="parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:id="@+id/homeAddMainCL"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/homeAddTotalProgress"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/total_progress"
                >
            </TextView>


            <com.google.android.material.chip.ChipGroup
                android:id="@+id/homeAddTypeSelectChipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/homeAddTotalProgress"
                android:layout_marginStart="0dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                app:chipSpacingHorizontal="8dp"

                >

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:id="@+id/homeAddTypeSelect1"
                    android:text="@string/waiting"
                    android:textAlignment="center"
                    app:chipStrokeWidth="0dp"
                    android:textSize="14sp"
                    android:checkable="true"
                    android:clickable="true"
                    android:focusable="true"
                    style="@style/Widget.MaterialComponents.Chip.Action"
                    android:layoutDirection="rtl"
                    >
                </com.google.android.material.chip.Chip>

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:id="@+id/homeAddTypeSelect2"
                    android:text="@string/not_passing"
                    android:textAlignment="center"
                    app:chipStrokeWidth="0dp"
                    android:textSize="14sp"
                    android:checkable="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:layoutDirection="rtl"
                    style="@style/Widget.MaterialComponents.Chip.Action"

                    >

                </com.google.android.material.chip.Chip>

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:id="@+id/homeAddTypeSelect3"
                    android:text="@string/passing"
                    android:textAlignment="center"
                    app:chipStrokeWidth="0dp"
                    android:textSize="14sp"
                    android:checkable="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:layoutDirection="rtl"
                    style="@style/Widget.MaterialComponents.Chip.Action"

                    >
                </com.google.android.material.chip.Chip>


                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:id="@+id/homeAddTypeSelect4"
                    android:text="@string/passing"
                    android:textAlignment="center"
                    app:chipStrokeWidth="0dp"
                    android:textSize="14sp"
                    android:checkable="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:layoutDirection="rtl"
                    style="@style/Widget.MaterialComponents.Chip.Action"


                    >
                </com.google.android.material.chip.Chip>



            </com.google.android.material.chip.ChipGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>